Changed empty? to blank? and fixed some spacing in communities/index

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -345,3 +345,5 @@ table tr:nth-child(even) { background-color: #E6FFE6; }
 table td:last-child { text-align: right; }
 
 #posting_info { width: 390px; }
+
+#user_communities { margin-bottom: 20px; }
